# pennington_m110a_demod

./: .gitignore  .gitmodules  AF-DM Source Code Analysis.md  API_INTEGRATION.md  Brain_Modem_Interoperability_Testing_Guide.md  CURRENT_WORK.md  Document_Alignment.md  LICENSE  M110A_Modem_v1.2.0_Build147.SHA256.txt  M110A_Modem_v1.2.0_Build148.SHA256.txt  M110A_Modem_v1.2.0_Build148.zip.asc  M110A_Modem_v1.2.0_Build149.SHA256.txt  M110A_Modem_v1.2.0_Build149.zip.asc  M110A_Modem_v1.2.0_Build150.SHA256.txt  M110A_Modem_v1.2.0_Build150.zip.asc  M110A_Modem_v1.2.0_Build152.SHA256.txt  M110A_Modem_v1.2.0_Build152.zip.asc  M110A_Modem_v1.2.0_Build167.SHA256.txt  M110A_Modem_v1.2.0_Build167.zip.asc  M110A_Modem_v1.2.1_Build213_windows-x64.SHA256.txt  M110A_Modem_v1.2.1_Build213_windows-x64.zip.asc  MS-DMT_Interoperability_Testing_Guide.md  README.md  SDRPlay_Integration_Pathway.md  SDR_INTEGRATION_ANALYSIS.md  SECURITY_SCAN_REPORT.md  SECURITY_SUMMARY.md  analyze_preamble.py  build.ps1  compare_pcm.py  gen_test_pcm.py  how 10beed8 --stat  license.key  melpe_gui_backup.h  melpe_gui_backup_utf8.h  phoenixnestmodem_eula.md  test_600_compare.py  test_analyze.py  test_brain_rx.py  test_compare.pcm  (+7 more)
.github/: copilot-instructions.md
api/: README.md  audio_source.h  channel_sim.h  check_raw_pcm.cpp  compare_pcm.cpp  debug_decode.cpp  iq_file_source.h  iq_source.h  modem.h  modem_config.h  modem_rx.cpp  modem_rx.h  modem_tx.cpp  modem_tx.h  modem_types.h  sample_source.h  test_api.cpp  test_pcm_loopback.cpp  test_reference_decode.cpp  test_simple_loopback.cpp  version.h
docs/: AFC_ROOT_CAUSE.md  API.md  AUTO_DETECT_VS_KNOWN_MODE.md  BRAIN_COMPATIBILITY_PLAN.md  BUILD_92_RELEASE_PACKAGE.md  Brain Modem RX Startup Discard Issu.txt  CHANNEL_SIMULATION.md  CURRENT_UNDERSTANDING_MSDMT.md  DEVELOPMENT.md  EQUALIZERS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_PLAN_R28.md  M110A_MODES_AND_TEST_MATRIX.md  M75_SESSION_SUMMARY.md  M75_WALSH_ALGORITHM.md  MSDMT_COMPATIBILITY_PLAN.md  POOR_HF_INVESTIGATION.md  PROJECT_STATUS.md  PROTOCOL.md  QT_MSDMT_REFERENCE.md  README.md  RELEASE_v1.2.0_NOTES.md  RX_CHAIN.md  Refrence_Software_Testing_Framework.md  TCPIP Guide.md  TODO.md  TODO_DETAILED.md  TODO_M75_WALSH.md  TX_CHAIN.md  VERSION_ITERATION_INSTRUCTIONS.md  afc_implementation_plan.md  brain_core_integration.md  development_journal.md  equalizer_implementation_plan.md  mlse_equalizer_plan.md  mode_detection_progress.md  r28.md  r28_reference.md  session_journal.txt  watterson_channel_progress.md
gpg/: README.md  public_key.asc  public_key.asc.template  sign_release.ps1  verify_release.ps1
hfchansim/: README.md  main.cpp
refrence_pcm/: 1200_BPS_LONG_metadata.json  1200_BPS_SHORT_metadata.json  150_BPS_SHORT_metadata.json  600_BPS_LONG_metadata.json  600_BPS_SHORT_metadata.json  75_BPS_LONG_metadata.json  tx_1200L_20251206_202536_295.pcm  tx_1200S_20251206_202533_636.pcm  tx_150L_20251206_202446_986.pcm  tx_2400L_20251206_202549_783.pcm  tx_2400S_20251206_202547_345.pcm  tx_300L_20251206_202506_058.pcm  tx_300S_20251206_202501_840.pcm  tx_75S_20251206_202410_888.pcm
release/: EULA.md  INSTALL.md  QUICKSTART.md  README.md  RELEASE_INFO.txt  license.key.template
release/docs/: API.md  (+1 more)
reports/: exhaustive_direct_20251210_144857.md  exhaustive_direct_20251210_154259.md  exhaustive_direct_20251210_172546.md  exhaustive_direct_20251210_173700.md  exhaustive_direct_20251210_174647.md  exhaustive_direct_20251210_175158.md  exhaustive_direct_20251210_175555.md  exhaustive_direct_20251210_222531.md  exhaustive_direct_20251210_223242.md  exhaustive_direct_20251211_004705.md  exhaustive_direct_20251211_024324.md
server/: README.md  brain_server.cpp  brain_server.h  brain_server_main.cpp  brain_tcp_server.h  debug_loopback.cpp  debug_tcp.py  exhaustive_server_test.cpp  main.cpp  msdmt_server.cpp  msdmt_server.h  phoenix_tcp_server.h  progressive.csv  tcp_server.cpp  tcp_server.h  tcp_server_base.cpp  tcp_server_base.h  test_2400s_afc.py  test_afc.py  test_all_commands.cpp  test_awgn.py  test_channel_cmds.cpp  test_client.cpp  test_loopback.cpp  test_tcp_base.cpp
src/: demodulator.c  dsp.c  frame_sync.c  symbol_sync.c
src/codec2_vocoder/: CMakeLists.txt  main.cpp
src/melpe_core/: CMakeLists.txt  INTEGRATION.md  Makefile  README.md  bitorder600.c  cbk600_gain.c  cbk600_msvq.c  cbk600_qpit.c  cbk600_voicing.c  classify.c  coeff.c  coeff.h  constant.h  cprv.h  cst600.h  cst600_bfi.h  cst600_gain.h  cst600_mode.h  cst600_msvq.h  cst600_qpit.h  cst600_voicing.h  download_test_audio.ps1  dsp_sub.c  dsp_sub.h  ext600_bfi.h  ext600_gain.h  ext600_mode.h  ext600_msvq.h  ext600_qpit.h  ext600_voicing.h  fec_code.c  fec_code.h  fft_lib.c  fft_lib.h  fs_lib.c  fs_lib.h  fsvq_cb.c  fsvq_cb.h  global.c  global.h  (+73 more)
src/melpe_core/test_audio/: OSR_us_000_0010_8k.raw  OSR_us_000_0011_8k.raw  OSR_us_000_0030_8k.raw  OSR_us_000_0031_8k.raw  test_audio_metadata.json
src/melpe_core/test_audio/recordings/: 1_2025-12-09T16-59-21_8k.pcm
test/: analyze_alignment.cpp  analyze_frame_alignment.cpp  analyze_frame_by_frame.cpp  analyze_pcm.cpp  analyze_pcm2.cpp  analyze_pcm3.cpp  analyze_pcm4.cpp  analyze_phase.cpp  analyze_probe_positions.cpp  analyze_received.cpp  analyze_timing.cpp  blind_decode.cpp  brain_exhaustive_test.cpp  brain_minimal.cpp  brute_force_gray.cpp  check_data_scrambler.cpp  check_data_start.cpp  check_data_vs_probe.cpp  check_decoder_params.cpp  check_frame_boundary.cpp  check_frame_struct.cpp  check_freq_offset.cpp  check_preamble.cpp  check_preamble_end.cpp  check_probe.cpp  check_probe_pattern.cpp  check_probe_scrambler.cpp  check_scrambler_pattern.cpp  check_symbol_extraction.cpp  check_timing.cpp  compare_detailed.cpp  compare_encode.cpp  compare_positions.cpp  compare_raw.cpp  compare_received.cpp  compare_tribits.cpp  complete_tx_trace.cpp  correlate_expected.cpp  debug_blocks.cpp  debug_brain_rx.cpp  (+223 more)
tools/: license_gen.cpp
tx_pcm_out/: 1200L_moderate_hf_20251207_194846_579.pcm  1200S_awgn_15db_20251207_200303_084.pcm  150L_foff_1hz_20251207_202307_523.pcm  150S_foff_1hz_20251207_204131_350.pcm  (+10 more)
(+166 files in other folders)
